[NAE-1833] Configuration priority  search
- refactor