@@ -1,6 +1,5 @@
 package com.netgrif.application.engine.configuration;
 
-import com.google.common.collect.ImmutableMap;
 import lombok.Data;
 import org.springframework.boot.context.properties.ConfigurationProperties;
 import org.springframework.context.annotation.Configuration;
@@ -12,7 +11,7 @@ import java.util.Map;
 @ConfigurationProperties(prefix = "nae.elastic.search.priority")
 public class ElasticCaseSearchConfiguration {
 
-    private Map<String, Float> fullTextFieldMap = ImmutableMap.of(
+    private Map<String, Float> fullTextFieldMap = Map.of(
             "title.keyword", 2f,
             "authorName", 1f,
             "authorEmail", 1f,
